--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,9 +3,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Downloadable Goodies</h2>
+                    <p>With all the nutrition advice on the internet, where do you start? Check out my 6 Tips for a Healthy Lifestyle:</p>
+                    <a href="/files/mollie-such-6-tips-healthy-lifestyle.pdf" target="_blank" class="btn btn-default btn-lg">Download "6 Tips"</a>
                 </div>
             </div>
         </div>
