--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,11 +2,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>About Mollie</h2>
+                <p>Mollie Such is a dietitian in Lexington, KY. She is passionate about helping people live better, healthier lives. She believes that the classic recipe of diet and exercise will help you find results. She does not believe the hype around fad diets. She does love kale, but isn't afraid of warm fudge brownies topped in ice cream. Hey, all things in moderation!</p>
+                <p>Mollie is <a href="http://www.nickandmollie.com" target="_blank">married to</a> Nick, and together they enjoy hiking and camping in the nearby Red River Gorge, playing team sports and guitar, and of course cooking all the time. Nick enjoys helping Mollie chop vegetables and write in the third person. Mollie really wants a Goldendoodle, and she needs your help convincing Nick to get the dog before they start having kids.</p>
+                <p>If you want to get to know the woman behind the nutrition tips, check out <a href="https://medium.com/sixth-street-and-beyond" target="_blank">Sixth Street and Beyond</a>, a blog Mollie shares with her three sisters, with posts about growing up in a small town, and life thereafter.</p>
             </div>
         </div>
     </section>
