--- a/_includes/download.html
+++ b/_includes/download.html
@@ -5,7 +5,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Downloadable Goodies</h2>
                     <p>With all the nutrition advice on the internet, where do you start? Check out my 6 Tips for a Healthy Lifestyle:</p>
-                    <a href="/files/mollie-such-6-tips-healthy-lifestyle.pdf" target="_blank" class="btn btn-default btn-lg">Download "6 Tips"</a>
+                    <p><a href="/files/6-tips-healthy-lifestyle-mollie-such.pdf" target="_blank" class="btn btn-default btn-lg">Download "6 Tips"</a></p>
+                    <p><a href="/files/pre-post-workout-mollie-such.pdf" target="_blank" class="btn btn-default btn-lg">Download "Pre / Post Workout"</a></p>
+                    <p><a href="/files/breakfast-of-champions-mollie-such.pdf" target="_blank" class="btn btn-default btn-lg">Download "Breakfast Champ"</a></p>
                 </div>
             </div>
         </div>
